# GhydraMCP

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GHIDRA_HTTP_API.md  GHYDRA_CLI.md  JAVA_PLUGIN_API.md  MCP_BRIDGE_API.md  README.md  TESTING.md  bridge_mcp_ghidra.py  bridge_mcp_hydra.py  error.tmp  pom.xml  pyproject.toml  refactoring_namespaces.py  refactoring_proposal.md  refactoring_sample.py  run_tests.py  skill_todo.md  test_comments.py  test_data_create.py  test_data_delete.py  test_data_operations.py  test_data_simple.py  test_data_type.py  test_data_update.py  test_emulation.py  test_http_api.py  test_javalin_port.py  test_mcp_client.py
.github/workflows/: build.yml
docs/plans/: 2026-04-23-central-plugin-refactor.md
docs/superpowers/plans/: 2026-06-19-pcode-emulation.md  2026-06-19-unicorn-emulation.md  2026-06-21-unicorn-failure-contract.md  2026-06-22-unicorn-dynamic-hardening.md  2026-06-23-unicorn-call-and-hooks.md  2026-06-24-pcode-call-and-hooks.md  2026-06-24-pr-review-fixes.md  2026-06-25-compound-re-callpaths-string-usage.md  2026-06-25-dynamic-emulation-api.md  2026-06-25-engine-agnostic-dynamic-call-hooks.md  2026-06-29-compound-re-review-fixes.md  2026-06-29-compound-re-traversal-extraction.md
ghydra/: __init__.py
ghydra/cli/: __init__.py  analysis.py  classes.py  comments.py  data.py  datatypes.py  dynamic.py  emulation.py  functions.py  instances.py  main.py  memory.py  namespaces.py  project.py  scalars.py  scripts.py  segments.py  structs.py  symbols.py  ui.py  variables.py  xrefs.py
ghydra/client/: __init__.py  exceptions.py  http_client.py  models.py
ghydra/config/: __init__.py  config_manager.py  defaults.py
ghydra/dynamic/: __init__.py  calling_convention.py  exceptions.py  ghidra_provider.py  registers.py  unicorn_engine.py
ghydra/formatters/: __init__.py  base.py  json_formatter.py  table_formatter.py
ghydra/utils/: __init__.py  output.py  pager.py  validators.py
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  .graphify_uncached.txt  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
src/assembly/: complete-package.xml  ghidra-extension.xml
tests/: test_bridge_compound_re.py  test_bridge_formatters.py  test_bridge_helpers.py  test_bridge_request.py  test_bridge_unicorn.py  test_bridge_unicorn_hooks.py  test_calling_convention.py  test_cli_formatters.py  test_cli_validators.py  test_dynamic_cli.py  test_dynamic_e2e.py  test_dynamic_registers.py  test_ghidra_provider.py  test_unicorn_engine.py
(+129 files in other folders)
