[project]
name = "ghydramcp"
version = "2.0.0"
description = "AI-assisted reverse engineering bridge: a multi-instance Ghidra plugin exposed via a HATEOAS REST API plus an MCP Python bridge for decompilation, analysis & binary manipulation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp==1.6.0",
    "requests==2.32.3",
]

[project.scripts]
ghydramcp = "bridge_mcp_hydra:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["bridge_mcp_hydra.py"]
