[project]
name = "ghydramcp"
version = "3.0.0-rc.1"
description = "Multi-instance Ghidra plugin with HATEOAS REST API and MCP bridge for AI-assisted reverse engineering, binary analysis, and decompilation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp==1.6.0",
    "requests==2.32.3",
    "click>=8.1.0,<9",
    "rich>=13.0.0,<14",
    "urllib3>=2.0.0,<3",
]

[project.optional-dependencies]
unicorn = [
    "unicorn>=2.0,<3",
    "capstone>=5.0,<6",
]

[project.scripts]
ghydramcp = "bridge_mcp_hydra:main"
ghydra = "ghydra.cli.main:cli"

[tool.pytest.ini_options]
# Scope bare `pytest` to the unit-test suite under tests/; the root-level
# test_*.py files are live-Ghidra integration tests run via run_tests.py.
testpaths = ["tests"]
# Unicorn's TCG memory manager raises (and internally handles) first-chance
# access violations on Windows; pytest's auto-enabled faulthandler would
# otherwise print alarming-but-benign "Windows fatal exception" tracebacks.
addopts = "-p no:faulthandler"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ghydra"]
include = ["bridge_mcp_hydra.py", "ghydra/**/*.py"]
